add websocket and listen on port 4321

--- a/backend/views/layout.html
+++ b/backend/views/layout.html
@@ -117,7 +117,7 @@
   }
 
 function checkAstroConnection() {
-  fetch('http://localhost:4321')
+  fetch('http://dashboard.localhost:4321')
     .then(() => {
       // Server responded successfully
       updateUI(true);
