--- a/backend/views/layout.html
+++ b/backend/views/layout.html
@@ -89,7 +89,7 @@
   </div>
   
   <div id="astro-running" class="hidden">
-    <p>The Astro frontend is running. You can access the complete site at: <a href="http://localhost:4321" id="astro-link">http://localhost:4321</a></p>
+    <p>The Astro frontend is running. You can access the complete site at: <a href="http://dashboard.localhost:4321" id="astro-link">http://dashboard.localhost:4321</a></p>
   </div>
 </div>
 
